Fixing Colors according to the pallet

--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Halloween Site</title>
+        <title>Rescue Dudes - Save Doggos</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
           <nav class="nav container">
             <a href="#" class="nav_logo">
-              <img src="assets/img/logo.png" alt="" class="nav_logo-img">
-              Halloween
+              <img src="assets/img/rd_logo.png" alt="" class="nav_logo-img">
             </a>
 
             <div class="nav_menu" id="nav-menu">
@@ -34,20 +33,20 @@
                   <a href="#home" class="nav_link">Home</a>
                 </li>
                 <li class="nav_item">
-                  <a href="#about" class="nav_link">About</a>
+                  <a href="#about" class="nav_link">About us</a>
                 </li>
                 <li class="nav_item">
-                  <a href="#trick" class="nav_link">Candy</a>
+                  <a href="#trick" class="nav_link">Rarity</a>
                 </li>
                 <li class="nav_item">
-                  <a href="#new" class="nav_link">New</a>
+                  <a href="#new" class="nav_link">RoadM ap</a>
                 </li>
 
-                <a href="#" class="button button--ghost">Support</a>
+                <a href="#" class="button button--ghost">Mint Now</a>
               </ul>
 
               <div class="nav_close" id="nav-close">
-                <i class='bx bx-x'></i>
+                <i class='bx bx-menu'></i>
               </div>
 
               <img src="assets/img/nav-img.png" alt="" class="nav_img">
@@ -55,7 +54,7 @@
             </div>
 
             <div class="nav_toggle" id="nav-toggle">
-              <i class='bx bx-grid-alt' ></i>
+              <i class='bx bx-menu'></i>
             </div>
 
           </nav>
