Fixed colors on CSS and added pics

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Rescue Dudes - Save Doggos</title>
+        <title>Rescue Dudes NFT - Save the Doggos</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
           <nav class="nav container">
             <a href="#" class="nav_logo">
-              <img src="assets/img/rd_logo.png" alt="" class="nav_logo-img">
+              <img src="assets/img/rd_logo1.png" alt="" class="nav_logo-img">
             </a>
 
             <div class="nav_menu" id="nav-menu">
@@ -39,7 +39,7 @@
                   <a href="#trick" class="nav_link">Rarity</a>
                 </li>
                 <li class="nav_item">
-                  <a href="#new" class="nav_link">RoadM ap</a>
+                  <a href="#new" class="nav_link">RoadMap</a>
                 </li>
 
                 <a href="#" class="button button--ghost">Mint Now</a>
@@ -49,7 +49,7 @@
                 <i class='bx bx-menu'></i>
               </div>
 
-              <img src="assets/img/nav-img.png" alt="" class="nav_img">
+              <img src="assets/img/nav-img-rd.png" alt="" class="nav_img">
 
             </div>
 
@@ -68,24 +68,24 @@
                         <section class="swiper-slide">
                             <div class="home_content grid">
                                 <div class="home_group">
-                                  <img src="assets/img/home1-img.png" alt="Laughing Pumpkin" class="home_img">
+                                  <img src="assets/img/home-slide1.jpg" alt="3 rescue Dudes" class="home_img">
                                   <div class="home_indicator"></div>
                                   <div class="home_details-img">
-                                    <h4 class="home-details-title">Wasabi's Pumpkin Show</h4>
-                                    <span class="home_details-subtitle">The Living Pumpkin</span>
+                                    <h4 class="home-details-title">Rescue Dudes</h4>
+                                    <span class="home_details-subtitle">The Collection</span>
                                   </div>
                                 </div>
                                 <div class="home_data">
-                                  <h3 class="home_subtitle">#1 Top Scariest Ghost</h3>
-                                  <h1 class="home_title">UOOOO <br> TRICK OR <br> TREAT!!</h1>
-                                  <p class="home_description">Hi, I'm Humberto, people call me "Wasabi". I am currently trying to learn 
-                                    something new, building websites on my own with tutorials I find on Youtube and with Codecademy</p>
+                                  <h3 class="home_subtitle">NFT Collection</h3>
+                                  <h1 class="home_title">RESCUE <br> DUDES <br> TO THE RESCUE!!</h1>
+                                  <p class="home_description">Secure yourself for the alien arrive and 
+                                    rescue some doggos NOW! We have a 5000 collection of cool dudes.</p>
                                   
                                   <div class="home_buttons">
-                                    <a href="#" class="button">Book Now</a>
-                                    <a href="#" class="button-link button-flex">
-                                      Track Record
-                                      <i class='bx bx-right-arrow-alt button_icon'></i> 
+                                    <a href="#" class="button">Mint Now</a>
+                                     <a href="#" class="button-link button-flex">
+                                      Join Discord
+                                      <i class='bx bxl-discord-alt'></i> 
                                     </a>
 
                                   </div>
