Added a new Gif

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                   <a href="#home" class="nav_link">Home</a>
                 </li>
                 <li class="nav_item">
-                  <a href="#about" class="nav_link">About us</a>
+                  <a href="#rarity" class="nav_link">Rarity</a>
                 </li>
                 <li class="nav_item">
-                  <a href="#trick" class="nav_link">Rarity</a>
+                  <a href="#about" class="nav_link">About us</a>
                 </li>
                 <li class="nav_item">
                   <a href="#new" class="nav_link">RoadMap</a>
@@ -156,27 +156,66 @@
             </section>
 
             <!--==================== CATEGORY ====================-->
-            <section class="section category">
-              <h2 class="section_title">Favorite Scare <br> Category</h2>
+            <section class="section category" id="rarity">
+              <h2 class="section_title">RARITY TRAITS</h2>
+              
+                <div class="about_container container grid">
+                  <div class="about_data">
+                    <p class="about_description">Each Alien at Rescue Dudes is equipped with a unique combination 
+                       of 3D traits that makes NFT distinguishabe from the rest of the series.
+                    </p>
+                  </div>
+                </div>
 
               <div class="category_container container grid">
                 <div class="category_data">
-                  <img src="assets/img/category1-img.png" alt="" class="category_img">
-                  <h3 class="category_title">Ghosts</h3>
-                  <p class="category_description">Choose the ghosts, the scariest there are.</p>
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title">55 Skins</h3>
+                  <p class="category_description">Different skins and watch out for the rare ones</p>
                 </div>
 
                 <div class="category_data">
-                  <img src="assets/img/category2-img.png" alt="" class="category_img">
-                  <h3 class="category_title">Pumpkins</h3>
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title"># Head Accesories</h3>
                   <p class="category_description">You look at the scariest pumpkins there is.</p>
                 </div>
 
                 <div class="category_data">
-                  <img src="assets/img/category3-img.png" alt="" class="category_img">
-                  <h3 class="category_title">Witch Hat</h3>
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title">50 Torsos</h3>
                   <p class="category_description">Pick the most stylish witch hats out there.</p>
                 </div>
+
+                <div class="category_data">
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title"># Eyes</h3>
+                  <p class="category_description">You look at the scariest pumpkins there is.</p>
+                </div>
+
+                <div class="category_data">
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title">10 Backs</h3>
+                  <p class="category_description">You look at the scariest pumpkins there is.</p>
+                </div>
+
+                <div class="category_data">
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title"># Neck Accesories</h3>
+                  <p class="category_description">You look at the scariest pumpkins there is.</p>
+                </div>
+
+                <div class="category_data">
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title"># Piercings</h3>
+                  <p class="category_description">You look at the scariest pumpkins there is.</p>
+                </div>
+
+                <div class="category_data">
+                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <h3 class="category_title"># Backgrounds</h3>
+                  <p class="category_description">You look at the scariest pumpkins there is.</p>
+                </div>
+
               </div>
             </section>
 
@@ -184,15 +223,19 @@
             <section class="section about" id="about">
               <div class="about_container container grid">
                 <div class="about_data">
-                  <h2 class="section_title about_title">About Halloween <br> Night</h2>
-                  <p class="about_description">Night of all the saints, or all the dead, is celebrated on October 31 and it is a 
-                    very fun international celebration, this celebration comes from ancient origins, and is already 
-                    celebrated by everyone.
+                  <h2 class="section_title about_title">About Rescue Dudes</h2>
+                  <p class="about_description">For Rescue Dudes the welfare of our doggy friends is very important, as we are aware of the nobility, love and patience that they give us, but we also know the sad reality that many dogs live daily on the streets.<br><br>According to a study conducted by the Universidad San Francisco de Quito in 2018, in the capital of 
+                    Ecuador there are around 600 thousand companion animals that are on the street, enduring multiple situations of mistreatment, hunger and cold
+                  </p>
+                  <p class="about_description">
+                    The economic crisis caused by the COVID-19 has severely affected these helpless beings, many of their owners lost their jobs and chose to abandon them on the streets and in shelters, these although they do not have sufficient economic resources strive to give them love and veterinary care they require , since many arrive
+                     in critical states of health, for all this, is that the Rescue Dudes team is committed to help this shelters 
+                     with the help of our amazing community and now you can be a part of this.
                   </p>
                   <a href="#" class="button">Learn More</a>
                 </div>
 
-                <img src="assets/img/about-img.png" alt="" class="about_img">
+                <img src="assets/img/rd_logo1.png" alt="" class="about_img">
               </div>
             </section>
 
