Change line 113 to Mint Now

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                       a hungry beast. Grahami can no longer contain his anger towards Adino.</p>
                                     
                                     <div class="home_buttons">
-                                      <a href="#" class="button">Book Now</a>
+                                      <a href="#" class="button">Mint Now</a>
                                       <a href="#" class="button-link button-flex">
                                         Track Record
                                         <i class='bx bx-right-arrow-alt button_icon'></i> 
