Line 142 Book Now for Mint Now

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     With his hogwarts certified power he promise to be a hero for all of ghostkind.</p>
                                   
                                   <div class="home_buttons">
-                                    <a href="#" class="button">Book Now</a>
+                                    <a href="#" class="button">Mint Now</a>
                                     <a href="#" class="button-link button-flex">
                                       Track Record
                                       <i class='bx bx-right-arrow-alt button_icon'></i> 
