Added new pic on Our Team

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="category_data">
-                  <img src="assets/img/placeholder-trait.png" alt="" class="category_img">
+                  <img src="assets/img/neck-accesorie.gif" alt="" class="category_img">
                   <h3 class="category_title"># Neck Accesories</h3>
                   <p class="category_description">You look at the scariest pumpkins there is.</p>
                 </div>
@@ -293,7 +293,7 @@
                     </div>
 
                     <div class="trick_content">
-                      <img src="assets/img/wasabi.png" alt="" class="trick_img">
+                      <img src="assets/img/grogu.png" alt="" class="trick_img">
                       <h3 class="trick_title">Grogu</h3>
                       <span class="trick_subtitle">Designer Artist</span>
                       <span class="trick_subtitle">Developer</span>
@@ -308,8 +308,8 @@
                       <img src="assets/img/wasabi.png" alt="" class="trick_img">
                       <h3 class="trick_title">Moorell</h3>
                       <span class="trick_subtitle">Designer Artist</span>
-                      <span class="trick_subtitle">Developer</span>
-                      <span class="trick_subtitle">Co-Founder</span>
+                      <span class="trick_subtitle">3d Artist</span>
+                      
 
                       <button class="button trick_button">
                         <a class="button_social" href="https://twitter.com/hcabrera_92" target="_blank"><i class='bx bxl-twitter'></i></a>
@@ -337,7 +337,7 @@
               <div class="newsletter_container container">
                 <h2 class="section_title">Our Newsletter</h2>
                 <p class="newsletter_description">
-                  Get the latest news in our projects or keep with our team. 
+                  Get the latest news in our projects or keep up with our team. 
                   We promise we won't spam too much ;)
                 </p>
           
