added new image

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     </div>
                     
                     <div class="trick_content">
-                      <img src="assets/img/wasabi.png" alt="" class="trick_img">
+                      <img src="assets/img/Wasabi.png" alt="" class="trick_img">
                       <h3 class="trick_title">Wasabi</h3>
                       <span class="trick_subtitle">Designer Artist</span>
                       <span class="trick_subtitle">Developer</span>
