Updated line throug to check work thats done

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="roadmap_content_l">
                       <h2>0%</h2>
                   
-                        <p>• Create Discord, Twitter, Instagram, TikTok and Website</p>
+                        <p class="done">• Create Discord, Twitter, Instagram, TikTok and Website</p>
                         <p>• Grow a strong community</p>
                         <p>• Promote and market our NFTs</p>
                       
