--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                 </div>
 
                 <div class="category_data">
-                  <img src="assets/img/comingsoon-accesories.gif" alt="" class="category_img">
+                  <img src="assets/img/back-accesorie.gif" alt="" class="category_img">
                   <h3 class="category_title">10 Backs</h3>
-                  <p class="category_description">Anyone here needs a katana?</p>
+                  <p class="category_description">Anyone here needs a barbed wire bat?</p>
                 </div>
 
                 <div class="category_data">
